# vision_opencv

cv_bridge/: CMakeLists.txt
cv_bridge/include/cv_bridge/: cv_bridge.hpp  cv_mat_sensor_msgs_image_type_adapter.hpp  rgb_colors.hpp
cv_bridge/python/cv_bridge/: __init__.py  core.py
cv_bridge/src/: CMakeLists.txt  cv_bridge.cpp  cv_mat_sensor_msgs_image_type_adapter.cpp  module.cpp  module.hpp  module_opencv4.cpp  pycompat.hpp
cv_bridge/test/: conversions.py  test_compression.cpp  test_dynamic_scaling.cpp  test_endian.cpp  test_rgb_colors.cpp  utest.cpp  utest2.cpp
image_geometry/: CMakeLists.txt
